<resources>
    <string name="app_name">Ticketzy</string>


    <!-- Texts basics -->
    <string name="text_home_version">v %s</string>

    <string name="text_sale_price">R$ %.2f</string>

    <string name="error_value_zero">Valor não pode ser igual a R$0,00</string>

    <string name="cancel">CANCELAR</string>
    <string name="save">SALVAR</string>
    <string name="yes">SIM</string>
    <string name="no">Não</string>
    <string name="pay">PAGAR</string>
    <string name="confirmation">confirmação</string>
    <string name="confirm">confirmar</string>

    <!-- Dialogs -->
    <string name="dialog_payment_type_title">SELECIONE A FORMA DO PAGAMENTO</string>

    <string name="text_dialog_payment_type_choose_debit_card">CARTÃO DE DÉBITO</string>
    <string name="text_dialog_payment_type_choose_credit_card">CARTÃO DE CRÉDITO</string>
    <string name="text_dialog_payment_type_choose_money">DINHEIRO</string>
    <string name="text_dialog_payment_type_choose_sitef_direto">SITEF DIRETO</string>

    <string name="dialog_print_question_title">impressão de via</string>
    <string name="dialog_print_question_body">DESEJA IMPRIMIR A VIA DO CLIENTE?</string>

    <string name="dialog_cashier_open_title">confirmação</string>
    <string name="dialog_cashier_open_body">Confirma valor de abertura de caixa?</string>

    <string name="dialog_change_button_confirm">CONFIRMAR</string>
    <string name="dialog_change_button_cancel">CANCELAR</string>

    <string name="dialog_warning_title">AVISO</string>
    <string name="dialog_ok_button">OK</string>

    <string name="dialog_input_title_password">Informe a senha</string>

    <string name="dialog_input_password">Senha</string>

    <string name="text_dialog_message_no_products">Nenhum produto cadastrado! \nPor favor, acesse o Ticketzy Web para criar os produtos.</string>
    <string name="text_dialog_message_password_incorrect">Senha informada incorreta!</string>


    <!-- Buttons -->
    <string name="button_text_home_new_sale">Nova Venda</string>
    <string name="button_text_home_charge">Cobrar</string>
    <string name="button_text_home_administratives_functions">Funções Administrativas</string>
    <string name="button_text_home_cashier_functions">Funções de Caixa</string>
    <string name="button_text_home_reports">Relatórios</string>
    <string name="button_text_home_config">Configurações</string>

    <string name="button_text_config_sitef_conection_test">Teste de conexão SITEF</string>
    <string name="button_text_config_sitef_direct_access">SITEF - Acesso Direto</string>
    <string name="button_text_config_sitef_token_config">Config. Token SITEF</string>
    <string name="button_text_config_sitef_token_config_infos">Config. SITEF Infos</string>
    <string name="button_text_config_test_printer">Teste de impressora</string>
    <string name="button_text_config_product_refresh">Buscar produtos</string>

    <string name="button_text_config_enable_tls">HABILITADO</string>
    <string name="button_text_config_disable_tls">NÃO HABILITADO</string>

    <!-- Texts -->

    <string name="text_config_sitef_info_ip">IP</string>
    <string name="text_config_sitef_info_port">PORTA</string>

    <string name="category_config_sitef"> - SITEF - </string>
    <string name="category_config_printer"> - Impressora - </string>
    <string name="category_config_products"> - Produtos - </string>
    <string name="category_config_cashier"> - Caixa - </string>

    <string name="text_cashier_title">Abertura de caixa</string>
    <string name="text_cashier_start">Confirma abertura</string>

    <string name="text_cashier_title_finish">Fechamento de caixa</string>
    <string name="text_cashier_finish">Confirmar Fechamento?</string>

    <string name="button_text_cashier_finish">Fechamento de Caixa</string>
    <string name="button_text_cashier_sangria">Sangria</string>
    <string name="button_text_cashier_reinforce">Reforço de Caixa</string>

    <string name="text_cashier_finish_confirmation">Deseja realizar o fechamento de caixa?</string>
    <string name="text_cashier_sangria_confirmation">Deseja realizar a sangria de caixa?</string>
    <string name="text_cashier_reinforce_confirmation">Deseja realizar o reforço de caixa?</string>

    <string name="text_cashier_table_finish">Informações de Fechamento</string>
    <string name="text_cashier_table_payment_types">Formas de Pagamento</string>
    <string name="text_cashier_table_final_values">Valores Finais</string>

    <string name="text_cashier_table_sales_made">Vendas Realizadas</string>
    <string name="text_cashier_table_charge_made">Cobranças Realizadas</string>
    <string name="text_cashier_table_sangria_made">Sangrias Realizadas</string>
    <string name="text_cashier_table_reinforce_made">Reforços Realizados</string>
    <string name="text_cashier_table_cancels_made">Cancelamentos Realizados</string>

    <string name="text_cashier_table_type_debit">Cartão de Débito</string>
    <string name="text_cashier_table_type_credit">Cartão de Crédito</string>
    <string name="text_cashier_table_type_pix">Pix</string>
    <string name="text_cashier_table_type_money">Dinheiro</string>

    <string name="text_cashier_table_value">(%s) %s</string>

    <string name="text_cashier_table_start_money">Dinheiro Inicial</string>
    <string name="text_cashier_table_sangria_money">Total de Sangrias </string>
    <string name="text_cashier_table_reinforce_money">Total de Reforços </string>
    <string name="text_cashier_table_finish_money">Dinheiro em Caixa</string>

    <string name="button_text_sitef_reprint">Reimpressão</string>
    <string name="button_text_sitef_cancel">Estorno</string>
    <string name="button_text_sitef_send_logs">Envio de Logs SITEF</string>

    <!-- Fiserv Package Name Application -->
    <string name="ingenico_dx8000">br.com.bin</string>
    <string name="ingenico_dx4000">br.com.bin.dx4000</string>
    <string name="ingenico_ex4000">br.com.bin.ex4000</string>
    <string name="ingenico_ex6000">br.com.bin.ex6000</string>
    <string name="gertec_gpos780">br.com.bin.gpos780</string>
    <string name="gertec_gpos760">br.com.bin.gpos760</string>
    <string name="gertec_gpos720">br.com.bin.gpos720</string>
    <string name="sunmi_P2">br.com.bin.P2</string>
    <string name="sunmi_P2A11">br.com.bin.P2A11</string>
    <string name="positivo_L400">br.com.bin.l400</string>
    <string name="tectoy_T4">br.com.bin.T8</string>
    <string name="tectoy_T8">br.com.bin.T8</string>
    <string name="tectoy_T19">br.com.bin.T19</string>
</resources>






