<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/background_dialog_payment_type_choose"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTitle"
        android:text="@string/dialog_input_title_password"
        android:textColor="@android:color/white"
        android:background="@drawable/background_dialog_payment_type_choose_title"
        android:gravity="center"
        android:padding="16dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edt_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:hint="@string/dialog_input_password"
        android:inputType="number"
        android:padding="32dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/button_dialog_payment_type_choose_default"
            android:backgroundTint="@color/blue_primary"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/dialog_ok_button"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="visible" />


    </LinearLayout>

</LinearLayout>
